<resources>
    <string name="app_name">Bookmarks</string>
    <string name="backup">备份</string>
    <string name="sync">恢复</string>
    <string name="datasave">数据保存</string>
    <string name="usercenter">个人中心</string>
    <string name="privateSpace">私密空间</string>
    <string name="settings">设置</string>
    <string name="search">搜索</string>
    <string name="addNode">添加节点</string>
    <string name="addBookmark">添加书签</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_data">什么也没有</string>
    <string name="nodename">节点名</string>
    <string name="nodedes">节点描述</string>
    <string name="url">URL</string>
    <string name="title">标题</string>
    <string name="newNode">新建节点</string>
    <string name="OK">确定</string>
    <string name="cancle">取消</string>
    <string name="newBookmark">新建书签</string>
    <string name="clearhistory">清空历史记录</string>
    <string name="clear">清除</string>
    <string name="send">发送</string>
    <string name="view">浏览</string>
    <string name="delete">删除</string>
    <string name="modify">修改</string>
    <string name="move">移动</string>
    <string name="newname">新名称</string>
    <string name="rename">重命名</string>
    <string name="selectAll">全选</string>
    <string name="share">分享</string>
    <string name="NoselectAll">全不选</string>
    <string name="warnning">警告</string>
    <string name="warnningMessage">你确定要删除吗?</string>
    <string name="deletecomplete">删除完成</string>
    <string name="moveTo">移动到此</string>
    <string name="checknullerror">请选择要移动的书签或节点</string>
    <string name="movecomplete">移动完成</string>
</resources>
