<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/a_m_menu_home_search"
        android:icon="@drawable/ic_search_white_24dp"
        android:title="@string/search"
        app:showAsAction="always"
        tools:ignore="AppCompatResource" />

    <item
        android:id="@+id/a_m_menu_home_addNode"
        android:icon="@drawable/ic_note_add_white_24dp"
        android:title="@string/addNode"
        app:showAsAction="always"
        tools:ignore="AppCompatResource" />

    <item
        android:id="@+id/a_m_menu_home_addBookmark"
        android:icon="@drawable/ic_add_circle_outline_white_24dp"
        android:title="@string/addBookmark"
        app:showAsAction="always"
        tools:ignore="AppCompatResource" />
</menu>