<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingTop="16dp"
    >
    <android.support.design.widget.TextInputLayout
        android:id="@+id/addnode_til_nodename"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/addnode_et_nodename"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:hint="@string/nodename"
            android:drawableRight="@drawable/ic_clear_black_24dp"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/addnode_til_nodedes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/addnode_et_nodedes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nodedes"
            android:drawableRight="@drawable/ic_clear_black_24dp"/>
    </android.support.design.widget.TextInputLayout>
   <RelativeLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:paddingTop="16dp"
       android:paddingBottom="24dp">
       <TextView
           android:id="@+id/addnode_tv_cancle"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/cancle"
           android:textColor="#e91e63"
           android:textSize="18sp"
           android:layout_toLeftOf="@+id/addnode_tv_ok"
           android:layout_marginRight="20dp"
           android:clickable="true"/>
       <TextView
           android:id="@+id/addnode_tv_ok"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/OK"
           android:textColor="#e91e63"
           android:textSize="18sp"
           android:layout_alignParentRight="true"
           android:clickable="true"
           />
   </RelativeLayout>
</LinearLayout>