<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <RelativeLayout
        android:id="@+id/chose_rela_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/chose_tv_view"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/view"
            android:gravity="center"
            android:textSize="18sp"
            />
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#cfd8dc"/>

    <RelativeLayout
        android:id="@+id/chose_rela_send"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/chose_tv_send"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/send"
            android:gravity="center"
            android:textSize="18sp"
            />
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#cfd8dc"/>

    <RelativeLayout
        android:id="@+id/chose_rela_delete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/chose_tv_delete"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/delete"
            android:gravity="center"
            android:textSize="18sp"
            />
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#cfd8dc"/>


    <RelativeLayout
        android:id="@+id/chose_rela_modify"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/chose_tv_modify"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/modify"
            android:gravity="center"
            android:textSize="18sp"
            />
    </RelativeLayout>
</LinearLayout>